Opened 12 years ago
Closed 12 years ago
#3143 closed bug (fixed)
ctime of file is not updated
Reported by: | bhaible | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | File Systems/BFS | Version: | R1/pre-alpha1 |
Keywords: | Cc: | olive@… | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
The POSIX description of the chmod system call says that
"Upon successful completion, chmod() shall mark for update the
st_ctime field of the file."
See http://www.opengroup.org/onlinepubs/009695399/functions/chmod.html Of course, this must also hold for the chmod command, since it is implemented using the chmod function.
The attached execution log shows that a successful invocation of 'chmod' did not bump the ctime.
Attachments (1)
Change History (3)
by , 12 years ago
Attachment: | haiku-ctime-bug.png added |
---|
comment:1 by , 12 years ago
Cc: | added |
---|
comment:2 by , 12 years ago
Component: | System/Kernel → File Systems/BFS |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev28734.