* In bfs_write_stat() B_STAT_UID, B_STAT_GID, and B_STAT_MODE now also trigger   an update of st_mtime. This is a work-around for the unmaintained st_ctime,   and this also fixes bug #3143.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28734 a95241bf-73f2-0310-859d-f6bbb57e9c96